--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -8,26 +8,24 @@ on:
 
 jobs:
   build:
-
-    runs-on: ${{matrix.os}}
     strategy:
       matrix:
         os: ["ubuntu-latest", "windows-latest", "macos-latest"]
         python-version: ["3.10", "3.11", "3.12"]
 
+    runs-on: ${{ matrix.os }}
+
     steps:
-    - name: Checkout
-      uses: actions/checkout@v5
+      - name: Checkout
+        uses: actions/checkout@v5
 
-    - name: Setup uv
-      uses: astral-sh/setup-uv@v7
-      with:
-        python-version: ${{matrix.python-version}}
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v7
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
-      run: |
-        uv sync --dev --locked
+      - name: Install dependencies
+        run: uv sync --dev --locked
 
-    - name: Test with pytest
-      run: |
-        uv run pytest -v
+      - name: Test with pytest
+        run: uv run pytest -v
