--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "mnist-project"
 version = "0.1.0"
 dependencies = [
+    "dvc-gs>=3.0.2",
     "hydra-core>=1.3.2",
     "matplotlib>=3.7.2",
     "omegaconf>=2.3.0",
